fix news on Iphone

--- a/src/scripts/news/news.less
+++ b/src/scripts/news/news.less
@@ -11,7 +11,7 @@
     flex-grow: 1;
     flex-shrink: 0;
     flex-basis: 50%;
-    min-height: 90vh;
+    min-height: 80vh;
     @media all and (max-width: 768px) {
       flex-basis: auto;
     }
